[package]
name = "auutil"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
which =     { version = "4.*"   }
colored =   { version = "2.*"   }
clap =      { version = "3.2.*" }
futures =   { version = "0.3.*" }

[dependencies.apt]
path = "src/profiles/apt/"

[dependencies.rust]
path = "src/profiles/rust/"

[dependencies.yum]
path = "src/profiles/yum"

[dependencies.pacman]
path = "src/profiles/pacman"

[dependencies.dnf]
path = "src/profiles/dnf"

[dependencies.zypper]
path = "src/profiles/zypper"

[dependencies.snap]
path = "src/profiles/snap"

[dependencies.brew]
path = "src/profiles/brew"

[dependencies.emerge]
path = "src/profiles/emerge"

[dependencies.nix]
path = "src/profiles/nix"

[dependencies.pip]
path = "src/profiles/pip"

[dependencies.pip3]
path = "src/profiles/pip3"

[dependencies.npm]
path = "src/profiles/npm"

[dependencies.nuget]
path = "src/profiles/nuget"

[dependencies.ruby]
path = "src/profiles/ruby"

[dependencies.exdb]
path = "src/profiles/exdb"

[dependencies.gvm]
path = "src/profiles/gvm"

[dependencies.osx]
path = "src/profiles/osx"

[dependencies.clamav]
path = "src/profiles/clamav"

[dependencies.flatpak]
path = "src/profiles/flatpak"

[dependencies.metasploit]
path = "src/profiles/metasploit"

[dependencies.perl]
path = "src/profiles/perl"
